--- a/public_html/index.html
+++ b/public_html/index.html
@@ -61,7 +61,7 @@
 	</div>
 	<div id="main" class="wrapper">
 		<aside>
-			<h3>Something aside</h3>
+			<h3>ここには直近のツイートを。</h3>
 		</aside>
 		<article>
 			<header>
