--- a/public_html/index.html
+++ b/public_html/index.html
@@ -45,18 +45,18 @@
 				});
 	    	});
 	    });
-	  }
 	  
-  	$.getJSON(
-  		"http://api.twitter.com/1/kiyotou/lists/live/statuses.json",
-  		null,
-  		function(data, status){
-  			for(i in data){
-  				$("#livetweets").append(data[i]).append("<br />");
-  			}
-  		}
-  	);
-
+	  // read tweets
+		$.getJSON(
+			"http://api.twitter.com/1/kiyotou/lists/live/statuses.json",
+			null,
+			function(data, status){
+				for(i in data){
+					$("#livetweets").append(data[i]).append("<br />");
+				}
+			}
+		);
+	}
 	</script>
 </head>
 <body onload="initialize()">
