--- a/public_html/index.html
+++ b/public_html/index.html
@@ -52,9 +52,12 @@
 			null,
 			function(data, status){
 				$.each(data, function(i, item){
-					$("#livetweets").append('<div class="tweet">');
-					$("#livetweets").append(item.user.name).append(" ").append(item.text);
-					$("#livetweets").append("</div>");
+					var tweet = '';
+					tweet += '<div class="tweet">';
+					tweet += '<p>'+item.user.name+' '+item.text+'</p>';
+					tweet += '<p>'+item.created_at+'</p>';
+					tweet += '</div>';
+					$("#livetweets").append(tweet);
 				});
 			}
 		);
