--- a/public_html/index.html
+++ b/public_html/index.html
@@ -76,19 +76,13 @@
 			</nav>
 		</header>
 	</div>
-	<div id="main" class="wrapper">
+	<div id="main" class="clearfix">
 		<aside>
 			<div id="livetweets"></div>
 		</aside>
 		<article>
-			<header>
-				<h2>Live Map at 大阪ミナミ</h2>
-				<div id="map_minami" style="width:650px; height:500px"></div>
-			</header>
-			<footer>
-			<h3>About the author</h3>
-				<p>Hideki Kiyoto</p>
-			</footer>
+			<h2>Live Map at 大阪ミナミ</h2>
+			<div id="map_minami" style="width:650px; height:500px"></div>
 		</article>
 	</div>
 	<div id="footer-container">
