ちょっと修正

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -76,7 +76,7 @@
 			</nav>
 		</header>
 	</div>
-	<div id="main" class="clearfix">
+	<div id="main" class="wrapper clearfix">
 		<aside>
 			<div id="livetweets"></div>
 		</aside>
