レスポンシブあたり修正

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,7 +26,7 @@
 		</aside>
 		<article>
 			<h2>Live Map at 大阪ミナミ</h2>
-			<div id="map_minami" style="width:650px; height:500px"></div>
+			<div id="map_minami" class="maps"></div>
 		</article>
 	</div>
 	<div id="footer-container">
