oocssっぽいの導入

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,6 +6,7 @@
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
+	<link rel="stylesheet" media="all" href="css/common.css"/>
 	<link rel="stylesheet" media="all" href="css/less.css"/>
 	<link rel="stylesheet" media="all" href="css/main.css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -17,7 +18,7 @@
 <body onload="initialize()">
 	<div id="header-container">
 		<header class="wrapper">
-			<h1 id="title">Live Here!!</h1>
+			<h1 id="title" class="mb15">Live Here!!</h1>
 		</header>
 	</div>
 	<div id="main" class="wrapper">
@@ -25,7 +26,7 @@
 			<div id="livetweets"></div>
 		</aside>
 		<article>
-			<h2>Live Map at 大阪ミナミ</h2>
+			<h2 class="mb15">大阪ミナミ</h2>
 			<div id="map_minami" class="maps"></div>
 		</article>
 	</div>
