--- a/public_html/index.html
+++ b/public_html/index.html
@@ -32,7 +32,7 @@
 	</div>
 	<div id="footer-container">
 		<footer class="wrapper">
-			<h3>A nice footer</h3>
+			<p>by 9thLab</p>
 		</footer>
 	</div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
