--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,6 +13,7 @@
 	<!-- Adding "maximum-scale=1" fixes the Mobile Safari auto-zoom bug: http://filamentgroup.com/examples/iosScaleBug/ -->
 	<meta name="author" content="kiyotou">
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+	<script type="text/javascript" src="js/libs/jquery.simplespy.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body onload="initialize()">
@@ -23,7 +24,7 @@
 	</div>
 	<div id="main" class="wrapper">
 		<aside>
-			<div id="livetweets"></div>
+			<ul id="livetweets"></ul>
 		</aside>
 		<article>
 			<h2 class="mb15">大阪ミナミ</h2>
