--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,6 +13,7 @@
 	<!-- Adding "maximum-scale=1" fixes the Mobile Safari auto-zoom bug: http://filamentgroup.com/examples/iosScaleBug/ -->
 	<meta name="author" content="kiyotou">
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/libs/jquery.simplespy.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
@@ -36,7 +37,6 @@
 			<p>by 9thLab</p>
 		</footer>
 	</div>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
 <!--[if lt IE 7 ]>
